Updating and improving examples

--- a/src/static/less/styles.less
+++ b/src/static/less/styles.less
@@ -1,16 +1,4 @@
-/* the style guide should reflect the structure of the less */
-
-// Core variables and mixins
-@import "variables.less";
 @import "mixins.less";
-
-// Core styles
 @import "reset.less";
-@import "page.less";
-@import "type.less";
-@import "links.less";
-@import "lists.less";
-@import "utility.less";
-
-@import "grid.less";
+@import "examples.less";
 @import "circles.less";
