--- a/src/static/less/circles.less
+++ b/src/static/less/circles.less
@@ -18,6 +18,8 @@
 	/* Number of segments is the only required argument. Cannot accept a number below 4. Anything above 12 starts to render badly. */
 	/* If @donut is set to yes, the circle will be rendered as a ring (defaults to white, you can set your own background if needed) */
 	/* If @donutStatic is set to yes, the segments of the ring will appear to move outwards when hovered */
+    @transpeed: 0.3s;
+
 	.gencircle(@numSegments,@donut: no,@donutSize: 50%,@donutStatic: no){
 		@segmentAngle: 360 / @numSegments;
 		@skew: 90 - @segmentAngle;
@@ -87,7 +89,7 @@
 			bottom:-50%;
 			width:100%;
 			height:100%;
-			background:@black;
+			background:#333333;
 			.border-radius( 100% );
 			.transition( all @transpeed );
 			.transform-point( 50% 50% );
@@ -108,6 +110,7 @@
 			height:@donutSize;
 			background:#FFFFFF;
 			.border-radius( 1000px );
+			.border-box();
 		}
 	}
 	/* add the hole to the individual segments, so the hover effect makes them look like they move outwards rather than just expanding */
